ChangeLog for ke_search_hooks

Upcoming version
[TASK]    Migrate query builder calls
[FEATURE] Add incremental indexing to ExampleIndexer, https://github.com/tpwd/ke_search_hooks/issues/1

Version 5.0.0, November 2022
[!!!]     This version drops support for TYPO3 10
[TASK]    Make extension installable with TYPO3 12
[TASK]    Disable (not remove) the registration of the example custom filter renderer to keep the default renderer for select filters intact by default.

Version 4.2.0, September 2022
[FEATURE] Add example for hook modifyFieldValuesBeforeStoring, in this case index "keywords" of EXT:filemetadata
[FEATURE] Add example for custom filter renderer

Version 4.1.0, February 2022
[!!!]     This version drops support for TYPO3 9
[TASK]    Make extension compatible with TYPO3 11
[TASK]    Move icons to Resources/Public/Icons
[TASK]    Encapsulate code in ext_localconf.php in Closure
[BUGFIX]  Fix PHP 8 issues

Version 4.0.0, October 2021
[!!!]     This is the version for ke_search version 4. (The namespace of ke_search has changed in version 4.)
[TASK]    Change namespace (for composer to tpwd, for classes to Tpwd)
[TASK]    Require ke_search 4.0.0
[TASK]    Use tpwd namespace for ke_search classes
[TASK]    Update dependencies in composer.json

Version 3.4.0, September 2021
[!!!]     The namespace of ke_search has changed in version 4. Please use tpwd/ke_search_hooks if you use ke_search version 4 or higher.
[TASK]    Mark extension as abandoned in composer.json.
[TASK]    Disable registering additional fields in ext_localconf.php since it will lead to errors if not every indexer is setting values for the additional fields.
[TASK]    Add example how to use the "getOrdering" hook
[TASK]    Add extension key to composer.json

Version 3.3.0, April 2021
[TASK]    Add example for hook additionalResultMarker
[TASK]    Add example for adding a custom sorting option

Version 3.2.0, November 2020
[TASK]    Add example for hook contentElementShouldBeIndexed