@@ -1,8 +1,9 @@
 ChangeLog for ke_search_hooks
 
 Upcoming version
-[TASK]    Migrate query builder calls
 [FEATURE] Add incremental indexing to ExampleIndexer, https://github.com/tpwd/ke_search_hooks/issues/1
+[TASK]    Migrate query builder calls
+[TASK]    Support indexer status in ExampleIndexer
 
 Version 5.0.0, November 2022
 [!!!]     This version drops support for TYPO3 10
